Setup tutorial component in html home_index

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babelify": "^7.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "lodash": "latest"
+    "lodash": "latest",
   },
   "devDependencies": {
     "browserify": "latest",
