--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "watchify": "latest",
     "chai": "^3.3.0",
     "sinon": "1.17.1",
-    "sinon-chai": "2.8.0"
+    "sinon-chai": "2.8.0",
+    "babel-jest": "latest"
   }
 }
