--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^3.3.0",
     "sinon": "1.17.1",
     "sinon-chai": "2.8.0",
-    "babel-jest": "latest"
+    "babel-jest": "latest",
+    "react-addons-test-utils": "latest"
   }
 }
