--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babelify": "^7.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "lodash": "latest"
+    "lodash": "latest",
+    "recordrtc": "latest"
   },
   "devDependencies": {
     "browserify": "latest",
@@ -18,7 +19,8 @@
     "gulp": "3.9.1",
     "gulp-uglify": "1.5.3",
     "gulp-util": "latest",
-    "jest-cli": "^0.8.2",
+    "gulp-sourcemaps": "latest",
+    "jest-cli": "latest",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "latest",
     "watchify": "latest",
