--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "author": "Steven Garcia",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "lodash": "latest",
-    "recordrtc": "latest",
-    "youtube-player": "latest"
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.5.0",
+    "babelify": "7.3.0",
+    "react": "15.1.0",
+    "react-dom": "15.1.0",
+    "lodash": "4.13.1",
+    "recordrtc": "5.3.8",
+    "youtube-player": "3.0.4"
   },
   "devDependencies": {
-    "browserify": "latest",
-    "chalk": "latest",
+    "browserify": "13.0.1",
+    "chalk": "1.1.3",
     "gulp": "3.9.1",
-    "gulp-if": "latest",
+    "gulp-if": "2.0.1",
     "gulp-uglify": "1.5.3",
-    "gulp-util": "latest",
-    "gulp-sourcemaps": "latest",
-    "jest-cli": "latest",
+    "gulp-util": "3.0.7",
+    "gulp-sourcemaps": "1.6.0",
+    "jest-cli": "12.1.1",
     "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "latest",
-    "watchify": "latest",
-    "chai": "^3.3.0",
-    "sinon": "1.17.1",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.7.0",
+    "chai": "3.5.0",
+    "sinon": "1.17.4",
     "sinon-chai": "2.8.0",
-    "babel-jest": "latest",
-    "react-addons-test-utils": "latest"
+    "babel-jest": "12.1.0",
+    "react-addons-test-utils": "15.1.0"
   }
 }
