--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babelify": "7.3.0",
+    "lodash": "4.13.1",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "lodash": "4.13.1",
+    "react-redux": "^4.4.5",
     "recordrtc": "5.3.8",
+    "redux": "^3.5.2",
     "youtube-player": "3.0.4"
   },
   "devDependencies": {
